# streamlit-cytoscape

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
examples/: app.py  comprehensive_demo.py  icon_search_example.py  simple_example.py
examples/data/: social.json
examples/demos/: custom_styles.py  edge_actions.py  edge_style.py  event_listeners.py  infopanel.py  layout.py  multi_tab.py  node_actions.py  node_style.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: StCytoscapeComponent.tsx  index.tsx
src/st_cytoscape/: __init__.py  component.py  events.py  styles.py
src/st_cytoscape/frontend/: package-lock.json  package.json
src/streamlit_cytoscape/: component.py
src/streamlit_cytoscape/frontend/: package-lock.json  package.json
src/streamlit_cytoscape/frontend/src/: index.js
src/streamlit_cytoscape/frontend/src/components/: edgeActions.js
src/streamlit_cytoscape/frontend/src/utils/: styles.js
st_cytoscape/: __init__.py  component.py  events.py  icons.py  styles.py
tests/: __init__.py  conftest.py  test_component.py  test_edge_actions.py  test_events.py  test_icons.py  test_infopanel.py  test_multi_tab.py  test_node_actions.py  test_smoke.py  test_st_cytoscape.py  test_styles.py
