[tool.poetry]
name = "st_cytoscape"
version = "0.1.0"
description = "A flexible, customizable, Streamlit component for interactive graph visualization using Cytoscape.js"
authors = ["Natalie Gill"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
